Fix: Resolve section overlapping by refreshing ScrollTrigger and adding global box-sizing

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: "Geist", sans-serif;
 
@@ -97,7 +101,7 @@ body {
   height: var(--vh);
   margin: auto;
   margin-top: 50px;
-  margin-bottom: -100px;
+  margin-bottom: 0px;
 }
 
 .techstack h2 {
